--- a/css/responsive.css
+++ b/css/responsive.css
@@ -109,8 +109,25 @@
         margin-bottom: 15px;
     }
     #portfolio .image-box .port-image .overlay h5{
-        margin-top: 30px;
-    }
+        position: absolute;
+        bottom: 100px;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+}
+    #portfolio .image-box .port-image .overlay p{
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+}
 
     /* portfolio ends */
    
