--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,9 @@ img{
 .pt10{
     padding-top: 35px !important;
 }
+.pr60{
+    padding-right: 60px !important;
+}
 /* ============================
         typhography css done
 =============================== */
